--- a/server/package.json
+++ b/server/package.json
@@ -4,7 +4,9 @@
   "description": "Server for vo",
   "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "prestart": "//build the files",
+    "start": "node dist/app.js",
+    "start-dev": "//todo"
   },
   "keywords": [
     "vo",
