--- a/client/package.json
+++ b/client/package.json
@@ -6,6 +6,7 @@
     "@apollo/react-hooks": "^3.1.3",
     "@material-ui/core": "^4.6.0",
     "@material-ui/icons": "^4.5.1",
+    "@material-ui/lab": "^4.0.0-alpha.45",
     "apollo-boost": "^0.4.4",
     "graphql": "^14.5.8",
     "react": "^16.11.0",
