--- a/server/package.json
+++ b/server/package.json
@@ -38,5 +38,8 @@
     "unzipper": "^0.10.5",
     "vm2": "^3.8.4",
     "yauzl": "^2.10.0"
+  },
+  "devDependencies": {
+    "gulp": "^4.0.2"
   }
 }
