--- a/client/package.json
+++ b/client/package.json
@@ -7,12 +7,14 @@
     "@material-ui/core": "^4.6.0",
     "@material-ui/icons": "^4.5.1",
     "@material-ui/lab": "^4.0.0-alpha.45",
-    "apollo-boost": "^0.4.4",
-    "graphql": "^14.5.8",
+    "apollo-boost": "^0.4.7",
+    "axios": "^0.19.2",
+    "graphql": "^14.6.0",
     "react": "^16.11.0",
     "react-dom": "^16.11.0",
+    "react-dropzone": "^10.2.1",
     "react-router-dom": "^5.1.2",
-    "react-scripts": "3.2.0"
+    "react-scripts": "^3.4.0"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -34,5 +36,6 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  }
+  },
+  "proxy": "http://localhost:8080"
 }
