--- a/server/package.json
+++ b/server/package.json
@@ -29,6 +29,8 @@
     "boom": "^7.3.0",
     "cors": "^2.8.5",
     "express": "^4.17.1",
+    "express-graphql": "^0.9.0",
+    "graphql": "^14.6.0",
     "isolated-vm": "^2.0.1",
     "mongoose": "^5.7.10",
     "mongoose-timestamps": "0.0.1",
