--- a/client/package.json
+++ b/client/package.json
@@ -9,7 +9,9 @@
     "@material-ui/lab": "^4.0.0-alpha.45",
     "apollo-boost": "^0.4.7",
     "axios": "^0.19.2",
+    "dompurify": "^2.0.8",
     "graphql": "^14.6.0",
+    "is-html": "^2.0.0",
     "react": "^16.11.0",
     "react-dom": "^16.11.0",
     "react-dropzone": "^10.2.1",
